fix: make sure videos don't get too small

--- a/main.css
+++ b/main.css
@@ -284,6 +284,7 @@
     border-radius: 0.5rem;
     width: 100%;
     max-width: 100vh;
+    max-width: max(100vh, 40rem);
     height: auto;
     aspect-ratio: 1.5;
   }
